assets/css/style.css
.wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 1em;
}
.search-box {
    position: relative;
    top: 12px;
}

li {
    text-align: left;
}

.history-card {
    position: absolute;
    top: 375px;
    left: 0px;
    padding: 10px;
    margin: 10px;

}

